refactor : Spring 버전 번경에 의한 SwaggerConfig, SecurityConfig 변경